feat: committee & update swagger
