# storage/api-docs/api-docs.json
@@ -17,10 +17,132 @@
         }
     ],
     "paths": {
+        "/committees": {
+            "get": {
+                "tags": [
+                    "committees"
+                ],
+                "summary": "index",
+                "operationId": "93eef2a49cb087670d9934e9b9114a65",
+                "responses": {
+                    "200": {
+                        "description": "response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/CommitteeResource"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "committees"
+                ],
+                "summary": "store",
+                "operationId": "ba89c0957217af7631183683a94ac641",
+                "responses": {
+                    "200": {
+                        "description": "response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/CommitteeResource"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/committees/{id}": {
+            "get": {
+                "tags": [
+                    "committees"
+                ],
+                "summary": "show",
+                "operationId": "793a45c33341ae1d272fd93a33b59fb5",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/CommitteeResource"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "committees"
+                ],
+                "summary": "update",
+                "operationId": "c6eab8f22080d24619136cc247b70ef8",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/CommitteeResource"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "committees"
+                ],
+                "summary": "destroy",
+                "operationId": "5a83109e165b52ced077492e16f346fe",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "response"
+                    }
+                }
+            }
+        },
         "/events": {
             "get": {
                 "tags": [
-                    "Events"
+                    "events"
                 ],
                 "summary": "index",
                 "operationId": "66c820e79ec6535e179375c186db9395",
@@ -39,7 +161,7 @@
             },
             "post": {
                 "tags": [
-                    "Events"
+                    "events"
                 ],
                 "summary": "store",
                 "operationId": "698833baaa136da25b55969bda5104d7",
@@ -60,7 +182,7 @@
         "/events/{id}": {
             "get": {
                 "tags": [
-                    "Events"
+                    "events"
                 ],
                 "summary": "show",
                 "operationId": "f2f0a5a610e5bd6a572f3b9bd5dd52c3",
@@ -89,7 +211,7 @@
             },
             "put": {
                 "tags": [
-                    "Events"
+                    "events"
                 ],
                 "summary": "update",
                 "operationId": "4e52f27bc565fbbc73a09411c475b011",
@@ -118,7 +240,7 @@
             },
             "delete": {
                 "tags": [
-                    "Events"
+                    "events"
                 ],
                 "summary": "destroy",
                 "operationId": "d9e4e6c812ee62b2c751d1d2d3d44b80",
@@ -138,10 +260,128 @@
                     }
                 }
             }
+        },
+        "/login": {
+            "post": {
+                "tags": [
+                    "users"
+                ],
+                "summary": "login",
+                "operationId": "abc53c091ac89d7a2af0892997d1ee08",
+                "responses": {
+                    "200": {
+                        "description": "response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "token": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/users": {
+            "get": {
+                "tags": [
+                    "users"
+                ],
+                "summary": "index",
+                "operationId": "7e2f5799553ec93c9c43e2a58490d447",
+                "responses": {
+                    "200": {
+                        "description": "response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/UserResource"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/users/{id}": {
+            "get": {
+                "tags": [
+                    "users"
+                ],
+                "summary": "show",
+                "operationId": "910a0c7cf580e1c605648d82a4e57f46",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/UserResource"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "users"
+                ],
+                "summary": "update",
+                "operationId": "ddfe232db1870b82493bf8bd25596d37",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/UserResource"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "components": {
         "schemas": {
+            "CommitteeResource": {
+                "properties": {
+                    "data": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/Committee"
+                        }
+                    }
+                },
+                "type": "object"
+            },
             "EventResource": {
                 "properties": {
                     "data": {
@@ -149,6 +389,28 @@
                         "items": {
                             "$ref": "#/components/schemas/Event"
                         }
+                    }
+                },
+                "type": "object"
+            },
+            "UserResource": {
+                "properties": {
+                    "data": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/User"
+                        }
+                    }
+                },
+                "type": "object"
+            },
+            "Committee": {
+                "properties": {
+                    "id": {
+                        "type": "integer"
+                    },
+                    "name": {
+                        "type": "string"
                     }
                 },
                 "type": "object"
@@ -173,7 +435,41 @@
                 },
                 "type": "object"
             },
-            "User": {}
+            "User": {
+                "properties": {
+                    "id": {
+                        "type": "integer"
+                    },
+                    "username": {
+                        "type": "string"
+                    },
+                    "name": {
+                        "type": "string"
+                    },
+                    "email": {
+                        "type": "string"
+                    },
+                    "birthday": {
+                        "type": "string"
+                    },
+                    "avatar": {
+                        "type": "string"
+                    },
+                    "class": {
+                        "type": "string"
+                    },
+                    "major": {
+                        "type": "string"
+                    },
+                    "facebook": {
+                        "type": "string"
+                    },
+                    "github": {
+                        "type": "string"
+                    }
+                },
+                "type": "object"
+            }
         }
     }
 }
